Changes for 1.6.1
* Changing IDrawable calls to use highest level of graphics rendinger available. (veqryn)

* Fixing game selector model to no longer return to default game if we have trouble loading the uri of previous xml, and will instead try to pick by name first. (veqryn)

* Added new sounds for air, sea, and land battles, rockets, politics, and tech. (veqryn)

* Fixed issue where fighters moving alone were not asked if they want to escort. (veqryn)

* Made DefaultAttachment extend GameDataComponent. (veqryn)


Changes for 1.6
* Fixing Global 1940 bugs, and getting it to use Technology completely. (veqryn)

* Allowed downloading of multiple maps/games in one go, by holding down CTRL while selecting maps in the "Download Games" dialog screen, and out of date maps will show up in bold, and maps up-to-date will show in italics. (ddurham)

* Created new rules attachment option, "switch", which allows either "true" or "false", thereby giving all conditions a memory function. (veqryn)

* Fixed bug where dependents of an air transport were not dying when the air transport was hit by AA fire, in the case where the air transports could fly deep into enemy territory and flew over an AA gun. (veqryn)

* Fixed parsing error in player attachment options: placementLimit, movementLimit, attackingLimit. (veqryn)

* Fixed fatal error in HistoryLog, caused by clearing an array that potentially gets accessed later at a specific index number, from doing an edit during a movement phase then doing an undo later. (veqryn)

* Created new game option, "Subs Can End NonCombat Move With Enemies", which allows submarines to end their noncombat movement in a sea zone containing any enemy units. (veqryn)

* Added information on which units are doing the bomber to the question about what should each bomber bomb. (veqryn)

* Fixed error from trying to undo a battle move created using another player's units, using edit mode. (veqryn)
