@@ -1,4 +1,6 @@
 Changes for 1.6.1
+* Added a drawing method and menu option to have territory borders drawn a second time on top of the map. (veqryn)
+
 * Changing IDrawable calls to use highest level of graphics rendinger available. (veqryn)
 
 * Fixing game selector model to no longer return to default game if we have trouble loading the uri of previous xml, and will instead try to pick by name first. (veqryn)
